-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 14.0.0-rc1
-
-
491c0ab7a (14.0)
Steps to reproduce:
- have two different Qt versions, one with qmlls correctly installed, one without
- depending on the Qt versions enable to allow qmlls even below Qt6.8
- do not check the use qmlls from latest Qt version
- set up / open a project with qml, use the kit with a non-working qmlls
- go to Projects view and switch to the kit using the Qt version holding a working qmlls
- check back on the qml file
if it is one of the "open documents" while switching the kit, the qmlls won't get updated/restarted to use the correct one
if you close it and re-open it, the correct qmlls will be used