Restart qmlls when project info changes

When the project info changes, we should update the qmlls version
which the current opened document is using.

Fixes: QTCREATORBUG-31208
Change-Id: Ief338efd863ea7472a4e5b68a5b6e7d601fd0f80
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>